exports[`Label should render its title 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center",
      },
      Array [
        Object {
          "color": "#9fb1b3",
          "fontFamily": "Brandon Text_bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "marginBottom": 9,
          "textAlign": "left",
        },
        undefined,
      ],
    ]
  }>
  foo
</Text>
`;

exports[`Label should support style overriding 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#003035",
        "fontFamily": "Brandon Text",
        "fontSize": 13,
        "textAlign": "center",
      },
      Array [
        Object {
          "color": "#9fb1b3",
          "fontFamily": "Brandon Text_bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "marginBottom": 9,
          "textAlign": "left",
        },
        Object {
          "fontSize": 23,
        },
      ],
    ]
  }>
  foo
</Text>
`;
